fixed the wrapping for team component

--- a/vikram-frontend/src/App.css
+++ b/vikram-frontend/src/App.css
@@ -1,3 +1,7 @@
+body{
+  background-color: plum;
+}
+
 .App {
   text-align: center;
 }
@@ -87,11 +91,13 @@ h1 {
   flex-direction: row;
   padding: 3rem 3rem;
   border-radius: 2rem;
+  flex-wrap: wrap;
 }
 
 .member {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   padding: 4rem 4rem;
   border-radius: 2rem;
 }
